# Nanookjaro-Toolkit

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md
.github/workflows/: build.yml
assets/: nanookjaro.desktop
backend/: CMakeLists.txt
backend/include/nanookjaro/: export.hpp
backend/src/: ffi.cpp
backend/src/drivers/: driver_manager.cpp  driver_manager.hpp
backend/src/hardware/: cpu_monitor.cpp  cpu_monitor.hpp  disk_monitor.cpp  disk_monitor.hpp  gpu_monitor.cpp  gpu_monitor.hpp  memory_monitor.cpp  memory_monitor.hpp
backend/src/maintenance/: package_manager.cpp  package_manager.hpp
backend/src/network/: network_monitor.cpp  network_monitor.hpp
backend/src/performance/: performance_monitor.cpp  performance_monitor.hpp
backend/src/system/: system_summary.cpp  system_summary.hpp
cli/: CMakeLists.txt  main.cpp
cmake/: FindNanookjaro.cmake
config/: nanookjaro.conf
docs/: CHANGELOG.md
docs/api/: api.md  api_zh-CN.md
docs/architecture/: architecture.md  architecture_zh-CN.md  building.md  building_zh-CN.md
docs/frontend/: frontend.md  frontend_zh-CN.md
docs/user_guide/: user_guide.md  user_guide_zh-CN.md
frontend/flutter/: README.md  analysis_options.yaml  pubspec.yaml
frontend/flutter/android/app/: build.gradle.kts
frontend/flutter/android/app/src/main/: AndroidManifest.xml
frontend/flutter/android/app/src/main/kotlin/com/example/nanookjaro_frontend/: MainActivity.kt
frontend/flutter/docs/: architecture.md  building.md
frontend/flutter/ios/Runner/: Info.plist
frontend/flutter/ios/Runner.xcodeproj/: project.pbxproj
frontend/flutter/lib/: main.dart  main_test.dart
frontend/flutter/lib/l10n/: app_localizations.dart
frontend/flutter/lib/providers/: locale_provider.dart  metrics_provider.dart  theme_provider.dart  update_provider.dart
frontend/flutter/lib/services/: ffi_bridge.dart
frontend/flutter/lib/ui/: app_shell.dart  app_theme.dart
frontend/flutter/lib/ui/dialogs/: pacman_upgrade_dialog.dart  proxy_config_dialog.dart
frontend/flutter/lib/ui/pages/: dashboard_page.dart
frontend/flutter/lib/ui/widgets/: aurora_background.dart  circular_metrics_card.dart  filesystem_usage_card.dart  glass_card.dart  log_drawer.dart  quick_actions_grid.dart  realtime_metric_card.dart  sparkline.dart  system_overview_card.dart  top_navigation_bar.dart
frontend/flutter/linux/: CMakeLists.txt
frontend/flutter/linux/runner/: my_application.cc
frontend/flutter/macos/Runner.xcodeproj/: project.pbxproj
frontend/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/flutter/macos/Runner/Configs/: AppInfo.xcconfig
frontend/flutter/test/: widget_test.dart
frontend/flutter/web/: index.html  manifest.json
frontend/flutter/windows/: CMakeLists.txt
frontend/flutter/windows/runner/: Runner.rc  main.cpp
pkgbuilds/nanookjaro-toolkit-git/: PKGBUILD
scripts/: build_core.sh  build_frontend.sh  build_full.sh
